--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
 
 <header class="section-heading">
 	<a href=" {% url 'store' %} " class="btn btn-outline-primary float-right">Ver Todo</a>
-	<h3 class="section-title">Productos populares</h3>
+	<h3 class="section-title">Productos SENSEI</h3>
 </header><!-- sect-heading -->
 
 	
